--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -59,7 +59,7 @@
     <div class="row">
       <div class="col s12 d-flex">
         <ul class="legal-copyright">
-          <li class="copyright">&copy; <span id="date"></span>&nbsp; Karen Wade</li>
+          <li class="copyright">&copy; 2025 &nbsp; Karen Wade</li>
           <li>
             <a href="/code-of-conduct">Code of Conduct</a>
           </li>
